force-app/main/default/objects/BalanceSheet__c/fields/ClosingBalanceLFI1__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceLFI1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLOSING BALANCE-LFI-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>