force-app/main/default/objects/BalanceSheet__c/fields/ClosingBalanceLTL2__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceLTL2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLOSING BALANCE-LTL-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>