force-app/main/default/objects/BalanceSheet__c/fields/ClosingBalanceLTR3__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceLTR3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLOSING BALANCE-LTR-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>