force-app/main/default/objects/BalanceSheet__c/fields/ClosingBalanceOSF1__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceOSF1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLOSING BALANCE-OSF-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>