force-app/main/default/objects/BalanceSheet__c/fields/ClosingBalanceSTI1__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceSTI1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLOSING BALANCE-STI-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>