force-app/main/default/objects/BalanceSheet__c/fields/OpenBalCapital__c.field-meta.xml
<CustomField>
    <fullName>OpenBalCapital__c</fullName>
    <label>OPENING BALANCE-Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>