force-app/main/default/objects/BalanceSheet__c/fields/OpenBalCapitals__c.field-meta.xml
<CustomField>
    <fullName>OpenBalCapitals__c</fullName>
    <label>OPENING BALANCE-CAPITALS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>