force-app/main/default/objects/BalanceSheet__c/fields/OpenBalCashEqu__c.field-meta.xml
<CustomField>
    <fullName>OpenBalCashEqu__c</fullName>
    <label>OPENING BALANCE-Cash and cash equivalent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>