force-app/main/default/objects/BalanceSheet__c/fields/OpenBalCurrentAsset__c.field-meta.xml
<CustomField>
    <fullName>OpenBalCurrentAsset__c</fullName>
    <label>OPENING BALANCE-Current Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>