force-app/main/default/objects/BalanceSheet__c/fields/OpenBalFixedAsset__c.field-meta.xml
<CustomField>
    <fullName>OpenBalFixedAsset__c</fullName>
    <label>OPENING BALANCE-Fixed Asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>