force-app/main/default/objects/BalanceSheet__c/fields/OpenBalFixedLongInv__c.field-meta.xml
<CustomField>
    <fullName>OpenBalFixedLongInv__c</fullName>
    <label>OPENING BALANCE-FIXED ASSET&amp;L-TERM INV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>