force-app/main/default/objects/BalanceSheet__c/fields/OpenBalLongAssetPro__c.field-meta.xml
<CustomField>
    <fullName>OpenBalLongAssetPro__c</fullName>
    <label>OPENING BALANCE-Long-term asset in Progr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>