force-app/main/default/objects/BalanceSheet__c/fields/OpenBalLongFinInv__c.field-meta.xml
<CustomField>
    <fullName>OpenBalLongFinInv__c</fullName>
    <label>OPENING BALANCE-Long-term Financial Inv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>