force-app/main/default/objects/BalanceSheet__c/fields/OpenBalLongLiability__c.field-meta.xml
<CustomField>
    <fullName>OpenBalLongLiability__c</fullName>
    <label>OPENING BALANCE-Long-term Liability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>