force-app/main/default/objects/BalanceSheet__c/fields/OpenBalLongReceivable__c.field-meta.xml
<CustomField>
    <fullName>OpenBalLongReceivable__c</fullName>
    <label>OPENING BALANCE-Long-term Receivables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>