force-app/main/default/objects/BalanceSheet__c/fields/OpenBalOtherSource__c.field-meta.xml
<CustomField>
    <fullName>OpenBalOtherSource__c</fullName>
    <label>OPENING BALANCE-Other Source</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>