force-app/main/default/objects/BalanceSheet__c/fields/OpenBalPayableDebts__c.field-meta.xml
<CustomField>
    <fullName>OpenBalPayableDebts__c</fullName>
    <label>OPENING BALANCE-PAYABLE DEBTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>