force-app/main/default/objects/BalanceSheet__c/fields/OpenBalShortLiability__c.field-meta.xml
<CustomField>
    <fullName>OpenBalShortLiability__c</fullName>
    <label>OPENING BALANCE-Short-term Liability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>