force-app/main/default/objects/BalanceSheet__c/fields/OpenBalShortRec__c.field-meta.xml
<CustomField>
    <fullName>OpenBalShortRec__c</fullName>
    <label>OPENING BALANCE-Short-term Receivables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>