force-app/main/default/objects/BalanceSheet__c/fields/OpenBalTotalLiabilityEqu__c.field-meta.xml
<CustomField>
    <fullName>OpenBalTotalLiabilityEqu__c</fullName>
    <label>OPENING BALANCE-TOTAL LIABILITY&amp;EQUITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>