force-app/main/default/objects/BalanceSheet__c/fields/OpeningBalanceCAS2__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceCAS2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OPENING BALANCE-CAS-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>