force-app/main/default/objects/BalanceSheet__c/fields/OpeningBalanceCAS3__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceCAS3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OPENING BALANCE-CAS-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>