force-app/main/default/objects/BalanceSheet__c/fields/OpeningBalanceFAS1__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceFAS1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OPENING BALANCE-FAS-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>