force-app/main/default/objects/BalanceSheet__c/fields/OpeningBalanceIRE1__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceIRE1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OPENING BALANCE-IRE-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>