force-app/main/default/objects/BalanceSheet__c/fields/OpeningBalanceIRE2__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceIRE2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OPENING BALANCE-IRE-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>