force-app/main/default/objects/BalanceSheet__c/fields/OpeningBalanceIVT1__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceIVT1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OPENING BALANCE-IVT-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>