force-app/main/default/objects/BalanceSheet__c/fields/OpeningBalanceLAP1__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceLAP1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OPENING BALANCE-LAP-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>