force-app/main/default/objects/BalanceSheet__c/fields/OpeningBalanceSTL1__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceSTL1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OPENING BALANCE-STL-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>