force-app/main/default/objects/BalanceSheet__c/fields/OpeningBalanceSTL2__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceSTL2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OPENING BALANCE-STL-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>