force-app/main/default/objects/BalanceSheet__c/fields/OpeningBalanceSTR5__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceSTR5__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OPENING BALANCE-STR-5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>