force-app/main/default/objects/BalanceSheet__c/fields/PreviousBSID__c.field-meta.xml
<CustomField>
    <fullName>PreviousBSID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS B/S ID</label>
    <referenceTo>BalanceSheet__c</referenceTo>
    <relationshipLabel>NEXT B/S</relationshipLabel>
    <relationshipName>PreviousBSID</relationshipName>
    <type>Lookup</type>
</CustomField>