force-app/main/default/objects/BalanceSheet__c/fields/RollupAPEmployeeCloseBal__c.field-meta.xml
<CustomField>
    <fullName>RollupAPEmployeeCloseBal__c</fullName>
    <label>ROLLUP AP EMPLOYEE-CLOSING BAL</label>
    <summarizedField>ACBalBS__c.CloseBalBS__c</summarizedField>
    <summaryFilterItems>
        <field>ACBalBS__c.BalanceTypeBS__c</field>
        <operation>equals</operation>
        <value>Payable to employees</value>
    </summaryFilterItems>
    <summaryForeignKey>ACBalBS__c.BSID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>