force-app/main/default/objects/BalanceSheet__c/fields/RollupVATDeductedOpenBal__c.field-meta.xml
<CustomField>
    <fullName>RollupVATDeductedOpenBal__c</fullName>
    <label>ROLLUP VAT DEDUCTED-OPENING BAL</label>
    <summarizedField>ACBalBS__c.OpenBalBS__c</summarizedField>
    <summaryFilterItems>
        <field>ACBalBS__c.BalanceTypeBS__c</field>
        <operation>equals</operation>
        <value>VAT Deducted</value>
    </summaryFilterItems>
    <summaryForeignKey>ACBalBS__c.BSID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>