force-app/main/default/objects/BalanceSheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency__c</columns>
    <columns>PeriodType__c</columns>
    <columns>PreviousBSID__c</columns>
    <columns>AtDay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>